# praxdaily

./: .gitignore  CHANGELOG.md  README.md  package.json  pyproject.toml
src/praxdaily/: __init__.py  __main__.py  app.py  cli.py  pipeline.py  runner.py  scheduler.py  workspaces.py
src/praxdaily/routes/: __init__.py  channels.py  cron.py  runs.py  schedule.py  settings.py  sources.py  wechat.py  workspaces.py
src/praxdaily/scrapers/: __init__.py  bilibili.py  hn.py  types.py
src/praxdaily/web/: index.html
tests/: test_app_health.py  test_channels_api.py  test_cron_api.py  test_pipeline.py  test_runs_api.py  test_schedule_api.py  test_scheduler.py  test_scrapers.py  test_settings_api.py  test_sources_api.py  test_wechat_login_api.py  test_workspaces_api.py
tests/e2e/: conftest.py  test_smoke.py
